Admin Priority Updated. Admin can delete/edit all of nweets

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nomadcoders.github.io/nwitter"
+  "homepage": "https://kinqq.github.io/nwitter"
 }
