--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=3333 && react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -42,6 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://kinqq.github.io/nwitter"
+  }
 }
